--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,10 @@
   "dependencies": {
     "AngularJS-Toaster": "~0.4.7"
   },
+  "devDependencies": {
+    "angular": "1.2.12",
+    "angular-animate": "1.2.12"
+  },
   "ignore": [
     "bower_components"
   ]
