--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -18,12 +18,23 @@
   "strict": true,
   "trailing": true,
   "smarttabs": true,
+  "jquery": true,
   "globals": {
-    "angular": false
+    "after": false,
+    "afterEach": false,
+    "angular": false,
+    "before": false,
+    "beforeEach": false,
+    "browser": false,
+    "describe": false,
+    "expect": false,
+    "inject": false,
+    "it": false,
+    "jasmine": false,
+    "spyOn": false
   },
   "predef": [
-    "$",
-    "_",
-    "printStackTrace"
+    "_"
   ]
 }
+
