--- a/bower.json
+++ b/bower.json
@@ -7,11 +7,14 @@
   "license": "EUPL-1.1",
   "private": true,
   "dependencies": {
-    "AngularJS-Toaster": "~0.4.7"
+    "AngularJS-Toaster": "~0.4.7",
+    "lodash": "2.4.1"
   },
   "devDependencies": {
     "angular": "1.2.12",
-    "angular-animate": "1.2.12"
+    "angular-animate": "1.2.12",
+    "angular-mocks": "1.2.12",
+    "angular-resource": "1.2.12"
   },
   "ignore": [
     "bower_components"
